- intervencije.net dialog buttons call assigned (test) numbers

--- a/app/src/main/res/layout/activity_pager_intervencije_net.xml
+++ b/app/src/main/res/layout/activity_pager_intervencije_net.xml
@@ -58,9 +58,11 @@
         android:layout_width="62dp"
         android:layout_height="63dp"
         android:background="@drawable/silence_close_custom_button"
-        android:text="stop"
+        android:fontFamily="sans-serif-black"
+        android:onClick="Close_dialog"
+        android:text="X"
         android:textColor="#FFFFFF"
-        android:textSize="12sp"
+        android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline24"
         app:layout_constraintEnd_toStartOf="@+id/guideline40"
         app:layout_constraintHorizontal_bias="1.0"
